--- a/public/views/dao.html
+++ b/public/views/dao.html
@@ -8,7 +8,7 @@
                 <span class="eth-stat-title">
                   {{ dao.balance | number: 10 }} </span><br>
                 <span class="eth-stat-text">
-                  TheDAO Balance
+                  TheMAN Balance
                   </span><br> 
                   <div class="margin-top-20">
                   {{ dao.extra_balance | number: 10 }} <span class="eth-stat-text">TheDAO Extra Balance
