--- a/public/views/block.html
+++ b/public/views/block.html
@@ -12,12 +12,15 @@
           <tr ><td width="25%">parentHash</td><td><a href="/block/{{block.number - 1}}">{{block.parentHash}}</td></tr>
           <tr ><td width="25%">sha3 Uncles</td><td>{{block.sha3Uncles}}</td></tr>
           <tr ><td width="25%">Mined By</td><td><a href="/addr/{{block.miner}}">{{block.miner}}</td></tr>
-          <tr ><td width="25%">Difficulty</td><td>{{block.difficulty | totalDifficulty}}</td></tr>
-          <tr ><td width="25%">Total Difficulty</td><td>{{block.totalDifficulty | teraHashes | number}} TH</td></tr>
+          <tr ><td width="25%">Difficulty</td><td>{{block.difficulty}}</td></tr>
+          <tr ><td width="25%">Total Difficulty</td><td>{{block.totalDifficulty }}KH </td></tr>
           <tr ><td width="25%">Gas Limit</td><td>{{block.gasLimit | number}}</td></tr>
           <tr ><td width="25%">Gas Used</td><td>{{block.gasUsed | number}}</td></tr>
           <tr ><td width="25%">nonce</td><td>{{block.nonce}}</td></tr>
-          <tr ><td width="25%">Extra Data</td><td>{{block.extraData}}</td></tr>
+          <tr ><td width="25%">leader</td><td>{{block.leader}}</td></tr>
+          <tr ><td width="25%">signatures</td><td>{{block.signatures.length}}</td></tr>
+          <tr ><td width="25%">transactionsRoot</td><td>{{block.transactionsRoot}}</td></tr>
+          <tr ><td width="25%">receiptsRoot</td><td>{{block.receiptsRoot}}</td></tr>
           <tr ng-show="block.uncles.length > 0"><td width="25%">Uncles</td><td>{{block.uncles.length}} uncles
             <table class="table table-condensed" ng-show="block.uncles.length > 0">
               <tbody>
