--- a/public/views/summary-stats.html
+++ b/public/views/summary-stats.html
@@ -16,11 +16,11 @@
             <div class="progress-info">
                 <div class="progress">
                     <span style="width: {{stats.usdEtcEth}}%;" class="progress-bar progress-bar-success green-sharp">
-                        <span class="sr-only">{{stats.usdEtcEth}}% ETC/ETH USD price</span>
+                        <span class="sr-only">{{stats.usdEtcEth}}% ETC/MAN USD price</span>
                     </span>
                 </div>
                 <div class="status">
-                    <div class="status-title"> ETC/ETH USD Price </div>
+                    <div class="status-title"> ETC/MAN USD Price </div>
                     <div class="status-number"> {{stats.usdEtcEth}}% </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                     </span>
                 </div>
                 <div class="status">
-                    <div class="status-title"> ETC/ETH Hashrate </div>
+                    <div class="status-title"> ETC/MAN Hashrate </div>
                     <div class="status-number"> {{stats.etcEthHash}}% </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                     </span>
                 </div>
                 <div class="status">
-                    <div class="status-title"> ETC/ETH difficulty </div>
+                    <div class="status-title"> ETC/MAN difficulty </div>
                     <div class="status-number"> {{stats.etcEthDiff}}% </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                         <small class="font-purple-soft">$</small>
                         <span data-counter="counterup" data-value="{{stats.usdEth}}">{{stats.usdEth}}</span>
                     </h3>
-                    <small>ETH PRICE</small>
+                    <small>MAN PRICE</small>
                 </div>
                 <div class="icon">
                     <i class="icon-trash"></i>
