--- a/public/views/tx.html
+++ b/public/views/tx.html
@@ -1,53 +1,145 @@
 <!-- BEGIN PAGE CONTENT-->
 <div class="row">
-  <div class="col-md-12 portlet light">
-      <div class="portlet-body">
+    <div class="col-md-12 portlet light">
+        <div class="portlet-body">
 
-        <table class="col-md-6 table table-hover">
-          
-          <tr ><td width="25%">hash</td><td>{{tx.hash}}</td></tr>
-          <tr ><td width="25%">blockNumber</td>
-                <td><a href="/block/{{tx.blockNumber}}">{{tx.blockNumber}}</a></td>
-          </tr>
-          <tr ><td width="25%">Time</td>
-                <td>{{tx.datetime | date:'yyyy-MM-dd HH:mm:ss Z' }} ({{tx.timestamp | timeDuration}} ago)</td>
-          </tr>
-          <tr ><td width="25%">from</td>
-                <td><a href="/addr/{{tx.from}}">{{tx.from}}</a></td></tr>
-          <tr ng-show="tx.to"><td width="25%">to</td>
-                <td><a href="/addr/{{tx.to}}">{{tx.to}}</a></td></tr>
-          <tr ng-show="tx.creates"><td width="25%">creates</td>
-                <td><a href="/addr/{{tx.creates}}">{{tx.creates}}</a></td></tr>                
-          <tr ><td width="25%">value</td><td>{{tx.value}} {{ settings.symbol }}</td></tr>
-          <tr ><td width="25%">gas Provided</td><td>{{tx.gas | number}}</td></tr>
-          <tr ><td width="25%">gasPrice</td><td>{{tx.gasPrice | number}}</td></tr>
-          <tr ><td width="25%">nonce</td><td>{{tx.nonce}}</td></tr>
-          <tr ><td width="25%">Input Data</td><td><pre class="code">{{tx.input}}</pre></td></tr>
-        </table>
+            <table class="col-md-6 table table-hover">
 
-        <table class="table table-condensed" ng-show="tx.isTrace">
-          <thead>
-              <tr>
-                  <th> From </th>
-                  <th> To </th>
-                  <th style="text-align:right"> Amount </th>
-                  <th style="text-align:right"> Gas </th>
-                  <th style="text-align:right"> GasUsed </th>
-                  <th></th>
-              </tr>
-          </thead>
-          <tbody>
-              <tr ng-repeat="t in internal_transactions track by $index">
-                  <td class="truncate-addrhash"> <a href="/addr/{{t.from}}">{{t.from}}</a> </td>
-                  <td class="truncate-addrhash"> <a href="/addr/{{t.to}}">{{t.to}}</a> </td>
-                  <td style="text-align:right"> {{t.value}} </td>
-                  <td style="text-align:right"> {{t.gas}} </td>
-                  <td style="text-align:right"> {{t.gasUsed}} </td>
-                  <td style="text-align:center"><span class="label label-sm label-info {{t.type}}"> {{t.type}}</span><span class="label label-sm label-danger" ng-show="t.error"> {{t.error}}</span></td>
-              </tr>
-          </tbody>
-        </table>
+                <tr>
+                    <td width="25%">hash</td>
+                    <td>{{tx.hash}}</td>
+                </tr>
+                <tr>
+                    <td width="25%">blockNumber</td>
+                    <td><a href="/block/{{tx.blockNumber}}">{{tx.blockNumber}}</a></td>
+                </tr>
+                <tr>
+                    <td width="25%">Time</td>
+                    <td>{{tx.datetime | date:'yyyy-MM-dd HH:mm:ss Z' }} ({{tx.timestamp | timeDuration}} ago)</td>
+                </tr>
+                <tr>
+                    <td width="25%">from</td>
+                    <td><a href="/addr/{{tx.from}}">{{tx.from}}</a></td>
+                </tr>
+                <tr ng-show="tx.to">
+                    <td width="25%">to</td>
+                    <td><a href="/addr/{{tx.to}}">{{tx.to}}</a></td>
+                </tr>
+                <tr ng-show="tx.creates">
+                    <td width="25%">creates</td>
+                    <td><a href="/addr/{{tx.creates}}">{{tx.creates}}</a></td>
+                </tr>
+                <tr>
+                    <td width="25%">value</td>
+                    <td>{{tx.value}} {{ settings.symbol }}</td>
+                </tr>
+                <tr>
+                    <td width="25%">gas Provided</td>
+                    <td>{{tx.gas | number}}</td>
+                </tr>
+                <tr>
+                    <td width="25%">gasPrice</td>
+                    <td>{{tx.gasPrice | number}}</td>
+                </tr>
+                <tr>
+                    <td width="25%">nonce</td>
+                    <td>{{tx.nonce}}</td>
+                </tr>
+                <tr id="data-1" style="">
+                    <td width="25%">Input Data</td>
+                    <td>
+                        <pre class="code">{{tx.input}}</pre>
+                    </td>
+                </tr>
+                <tr id="data-2" style="display: none;">
+                    <td width="25%">Input Data</td>
+                    <td>
+                        <pre class="code">{{tx.formatInput}}</pre>
+                    </td>
+                </tr>
+                <tr id="data-3" style="display: none;">
+                    <td width="25%">Input Data</td>
+                    <td>
+                        <pre class="code" ng-bind-html="tx.html"></pre>
+                    </td>
+                </tr>
+            </table>
+
+                <div class="col-sm-3"></div>
+                <div class="col-sm-9">
+                <div class="tab-content">
+                    <div class="tab-pane fade active in" id="rawtab">
+                        <div>
+                            <div id="ContentPlaceHolder1_btnconvert222" class="btn-group" style="margin-top: -2px">
+                                <button id="btnconvert222_1" type="button"
+                                        class="btn-u btn-u-default btn-u-xs  dropdown-toggle" data-toggle="dropdown"
+                                        style="padding: 0px 4px 0px 4px; top: -4px;" aria-expanded="false">View Input As
+                                </button>
+                                <button type="button" class="btn-u btn-u-default btn-u-xs dropdown-toggle"
+                                        style="padding: 0px 4px 0px 4px; top: -4px; margin-right:8px"
+                                        data-toggle="dropdown" aria-expanded="true">
+                                    <i class="fa fa-caret-down"></i>
+                                    <span class="sr-only">Toggle &gt;Dropdown</span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu" style="font-size: 12px; margin-top:-2px">
+                                    <li id="convert_default" class="selected">
+                                        <a onclick="f('data-1');">&gt;Default View</a>
+                                    </li>
+                                    <li id="convert_utf" class="">
+                                        <a onclick="f('data-2');">UTF-8</a>
+                                    </li>
+                                    <li id="convert_original" class="">
+                                        <a onclick="f('data-1');">Original</a>
+                                    </li>
+                                    <li id="convert_html" class="">
+                                        <a onclick="f('data-3');">Html</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </div>
+
+
+            <table class="table table-condensed" ng-show="tx.isTrace">
+                <thead>
+                <tr>
+                    <th> From</th>
+                    <th> To</th>
+                    <th style="text-align:right"> Amount</th>
+                    <th style="text-align:right"> Gas</th>
+                    <th style="text-align:right"> GasUsed</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="t in internal_transactions track by $index">
+                    <td class="truncate-addrhash"><a href="/addr/{{t.from}}">{{t.from}}</a></td>
+                    <td class="truncate-addrhash"><a href="/addr/{{t.to}}">{{t.to}}</a></td>
+                    <td style="text-align:right"> {{t.value}}</td>
+                    <td style="text-align:right"> {{t.gas}}</td>
+                    <td style="text-align:right"> {{t.gasUsed}}</td>
+                    <td style="text-align:center"><span
+                            class="label label-sm label-info {{t.type}}"> {{t.type}}</span><span
+                            class="label label-sm label-danger" ng-show="t.error"> {{t.error}}</span></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
     </div>
-
-  </div>
 </div>
+
+<script>
+    function f(id) {
+        var target1 = document.getElementById("data-1");
+        var target2 = document.getElementById("data-2");
+        var target3 = document.getElementById("data-3");
+        var target4 = document.getElementById(id);
+        target1.style.display = "none"
+        target2.style.display = "none"
+        target3.style.display = "none"
+        target4.style.display = ""
+    }
+</script>
